--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   overflow: hidden;
   display: flex;
   text-align: center;
-  background-color:#C5D1EB;
+  background-color:#ADB993;
+  ;
   flex-direction: column;
   align-items: center;
   width: 100vw;
