--- a/src/Components/BackgroundBox/BackgroundBox.css
+++ b/src/Components/BackgroundBox/BackgroundBox.css
@@ -1,6 +1,11 @@
-.background-square {
-    width: 300px;
-    height: 300px;
-    background-color: red;
+/* .background-square {
+    width: 500px;
+    height: 800px;
+    background-color: green;
+  } */
+  .background-square {
+    width: 100vw;
+    height: 920px;
+    background-color: #ADB993;
   }
   
