--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,3 +1,7 @@
+.headerWrapper .menuButton {
+  text-decoration: none;
+}
+
 .headerWrapper {
     background-color: #ADB993;
     height: 3.0rem;
@@ -5,6 +9,7 @@
     align-items: left;
     justify-content:space-evenly;
     width: 100vw;
+    border-bottom: 3px solid grey;
     /* border-bottom: solid 3px #f3ce13ed; */
     /* position: fixed;
     margin-bottom: 3.5rem; */
@@ -22,7 +27,8 @@
     vertical-align: bottom;
     padding: 0.25em 0.35em;
     border-radius: 0.15em;
-    background: #949D6A;
+    background: #949D6A; 
+  
   }
   
   .menuButton {
