--- a/src/Components/homePage/HomePage.css
+++ b/src/Components/homePage/HomePage.css
@@ -1,3 +1,4 @@
+
 .homeWrapper {
   height: 100%;
 }
@@ -24,11 +25,12 @@
   margin-bottom: 1rem;
 }
 .wrapper > h6 {
-  font-size: 40px;
-  margin-top: 3rem;
-  margin-bottom: 1rem;
-  justify-items: center;
-  color: #949D6A;
+  display: flex;
+  margin: 0.5rem;
+  justify-content: left;
+  font-weight: 500; /* 900*/
+  font: 1.3em/1 Impact, HelveticaNeue-CondensedBold, sans-serif;
+  color: white;
 }
 
 .wrapper > b {
@@ -61,4 +63,53 @@
   grid-column-gap: 20px;
   grid-row-gap: 20px;
   margin-top: 2rem;
+}
+
+/* Styles for the search bar and table */
+.searchBarWrapper {
+  position: relative;
+  width: 100%;
+  height: 8rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: top 0.6s ease-in-out;
+}
+
+.searchBarWrapper.active {
+  top: 35%;
+}
+
+.searchBarWrapper input {
+  height: 4rem;
+  width: 40rem;
+  margin: 0.5rem;
+  font-size: 2rem;
+}
+
+.tableWrapper {
+  margin-top: 4rem;
+  display: flex;
+  justify-content: center;
+}
+
+.tableWrapper table {
+  width: 80%;
+  margin: 0 auto;
+  border-collapse: collapse;
+}
+
+.tableWrapper th {
+  background-color: #006400;
+  color: #FFF;
+  padding: 1rem;
+}
+
+.tableWrapper td {
+  background-color: #E6FFE9;
+  padding: 1rem;
+}
+
+.search-button {
+  border-radius: 5px; /* You can adjust the value to change the amount of rounding */
 }
